# grid-bot-3d

./: .gitignore  README.md
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  schema.sql
backend/src/: auth.rs  config.rs  error.rs  main.rs  missions.rs  models.rs  routes.rs
frontend/: admin-minimal.css  admin.css  admin.html  admin.js  api.js  auth-minimal.css  fonts.css  game.js  icons.js  index.html  menu.js  missions.js  playgame.html  styles.css
presentation/: gridbot_uxui_redesign.html
tools/: generate_uxui_pdf.py
